# zed

./: .gitignore  README.md  main.py  pyproject.toml
tests/model/cli_prompt/: test_runner.py
tests/model/command_prompt/: test_prompt_runner.py
zed/: cli.py  constants.py  zed.py
zed/model/cli_prompt/: defs.py  runner.py  template.j2
zed/utils/: __init__.py  console.py  print.py
zed_assistant/: cli.py  zed.py
zed_assistant/model/: __init__.py  defs.py
zed_assistant/model/cli_prompt/: defs.py  runner.py  template.j2  template_system.j2  template_user.j2
zed_assistant/model/command_prompt/: __init__.py  defs.py  prompt_runner.py
zed_assistant/settings/: loader.py
zed_assistant/utils/: template_utils.py
zed_cli/: cli.py  zed.py
zed_cli/model/cli_prompt/: runner.py
zed_cli/utils/: __init__.py
