[tool.poetry]
name = "zed"
version = "0.1.0"
description = ""
authors = ["Matheus Hoffmann Silva <hoffmann.matheus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.23.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
